# slacktor

./: Cargo.toml  README.md
examples/: no_slacktor.rs  parallel.rs  parallel_u32.rs  parallel_u8.rs  simple.rs
src/: actor.rs  lib.rs  main.rs  slab.rs
