[package]
name = "slacktor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
futures = { version = "0.3.30", features = ["executor"] }
rand = "0.8.5"
slab = "0.4.9"

[features]
async = []

[profile.release]
lto = true
