[package]
name = "slacktor"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Slacktor is an extremely fast, bare-bones, low-overhead, supervisorless, no-std actor library."
repository = "https://github.com/peperworx/slacktor"
readme = "README.md"
keywords = ["actor", "no-std", "slacktor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = { version = "0.4.9", default-features = false }

[dev-dependencies]
rand = "0.8.5"
rayon = "1.10.0"

[features]
async = []



[profile.release]
opt-level = 3
lto = true
strip = true
